# lookado_seller

./: .gitignore  README.md
seller-web-automation/: .gitignore  .gitlab-ci.yml  .mcp.json  10.02.2026_JustTest_DEV_PARTIAL.md  17.03.2026_Full_Regression.txt  CLAUDE.md  ERROR_TESTS_REPORT.md  FAILED_TESTS_REPORT.md  README.md  allure-testops.json  bugs.md  conftest.py  errors.md  pages.md  pyproject.toml  pytest.ini  requirements.txt  run_allure_tests.sh  run_tests.py  run_tests_allure.sh  run_with_allure.sh  test_report_bugs.md  test_report_errors.txt  test_report_failures.txt  test_report_summary.md  test_results_dev.txt  test_results_main_full.txt  test_results_registration.txt
seller-web-automation/config/: __init__.py  settings.py
seller-web-automation/logs/: page_objects.log.1  page_objects.log.2  page_objects.log.3  page_objects.log.4  page_objects.log.5
seller-web-automation/pages/: base_page.py  dashboard_page.py  employee_page.py  login_page.py  order_detail_page.py  orders_page.py  product_detail_page.py  productcreate_page.py  products_list_page.py  profile_settings_page.py  promotions_page.py  registration_page.py  returns_page.py  reviews_page.py  shop_settings_page.py
seller-web-automation/reports/: 03.03.2026.md
seller-web-automation/scripts/: explore_finance_analytics.py  explore_orders_menu.py  explore_reviews_promotions.py  inspect_order_detail.py  inspect_products_page.py
seller-web-automation/test_data/: ORDER_DETAIL_TEST_PLAN.md  boundary_values.json  checklist.md  dashboard_test_data.json  employee_test_data.json  login_test_data.json  (+14 more)
(+95 files in other folders)
