[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seller-web-automation"
version = "1.0.0"
description = "Hybrid API + UI test automation framework for Seller Web Platform"
requires-python = ">=3.13"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "pages*", "utils*", "config*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "smoke: quick critical functionality tests",
    "negative: invalid input/error cases",
    "functional: complete workflow tests",
    "api: API tests"
]
addopts = "--strict-markers --tb=short --maxfail=5 --alluredir=allure-results"